# discordbots

./: .gitignore  README.md  pyproject.toml
devEnv/: Dockerfile  createuser.sh  docker-compose.yml
production/: Dockerfile_gpt  docker-compose.yml
src/: .gitignore
src/discord_bot/gpt/: constants.py  gptbot.py  openaiUtil.py  pyproject.toml
